<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
    <string name="description_post_menu" translatable="false">Post menu</string>
    <string name="description_like_icon" translatable="false">Likes</string>
    <string name="description_share_icon" translatable="false">Shares</string>
    <string name="description_views_icon" translatable="false">Views</string>
    <string name="description_save_icon" translatable="false">Save</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="enter_text">Type something!</string>
    <string name="post_text">Post text</string>
    <string name="chooser_share_post">Share Post</string>
    <string name="error_empty_content" translatable="false">No content!</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_posted">%1$s posted:</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="retry_loading">Retry</string>
    <string name="error_loading">Something went wrong. Try again later</string>
</resources>