<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_post_author_avatar"
        android:src="@mipmap/ic_netology_launcher"
        app:layout_constraintBottom_toTopOf="@id/barrier_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts_avatars" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_spacing"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_post_menu"
        app:layout_constraintBottom_toTopOf="@id/barrier_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/postText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_top"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="postText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/description_like_icon"
        android:minWidth="48dp"
        app:layout_constraintEnd_toStartOf="@id/shares"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_bottom" />


    <!--    <TextView-->
    <!--        android:id="@+id/like_counter"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_margin="@dimen/small_spacing"-->
    <!--        android:visibility="visible"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/like"-->
    <!--        app:layout_constraintStart_toEndOf="@id/like"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/like"-->
    <!--        tools:text="@sample/posts.json/data/likeCounter" />-->

    <androidx.constraintlayout.widget.Group
        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="picture,play_button"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/video"
        app:layout_constraintBottom_toTopOf="@id/picture"
        app:layout_constraintEnd_toEndOf="@id/picture"
        app:layout_constraintStart_toStartOf="@id/picture"
        app:layout_constraintTop_toBottomOf="@id/picture"
        app:srcCompat="@drawable/ic_play_24" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/barrier_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postText"
        android:src="@drawable/picture_fsdf"
        tools:srcCompat="@drawable/picture_fsdf" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shares"
        style="@style/Widget.AppTheme.ShareTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:contentDescription="@string/description_share_icon"
        app:layout_constraintBottom_toBottomOf="@+id/like"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toTopOf="@+id/like"
        app:srcCompat="@drawable/ic_share_24"
        tools:ignore="ImageContrastCheck" />

    <!--    <TextView-->
    <!--        android:id="@+id/share_counter"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_margin="@dimen/small_spacing"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/like"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/shares"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/like"-->
    <!--        tools:text="@sample/posts.json/data/shareCounter" />-->

    <TextView
        android:id="@+id/view_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier_bottom"
        tools:text="@sample/posts.json/data/shareCounter" />

    <ImageView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_spacing"
        android:contentDescription="@string/description_views_icon"
        app:layout_constraintBottom_toBottomOf="@+id/view_counter"
        app:layout_constraintEnd_toStartOf="@+id/view_counter"
        app:layout_constraintTop_toTopOf="@+id/view_counter"
        app:srcCompat="@drawable/ic_views_24"
        tools:ignore="ImageContrastCheck" />




</androidx.constraintlayout.widget.ConstraintLayout>
